<resources>
    <string name="app_name">VideoRecordDemo</string>
    <string name="teach_des">观看视频教学</string>
    <string name="came_a1">第一段视频 \n请手持身份证正面（有照片的一面），将其放置于面部下方，正对摄像头，保持5秒钟以上，请摘下眼镜、帽子等物品。</string>
    <string name="camera_a2">初级实名认证成功</string>
    <string name="camera_a3">每日出售总额不得超过%1$s,单笔交易额不得超过%2$s,如果想再提升额度，请进行高级实名认证。</string>
    <string name="camera_a4">某些广告中，商家可能要求完成高级实名认证才能交易</string>
    <string name="camera_a5">去买币交易</string>
    <string name="camera_a6">去币币交易</string>
    <string name="camera_a7">去完成高级实名认证</string>
    <string name="camera_a9">初级实名认证</string>
    <string name="camera_b1">高级实名认证</string>
    <string name="camera_b2">视频认证</string>
    <string name="camera_b3">上传中...</string>
    <string name="camera_b4">上传中...</string>
    <string name="camera_b5">第一段：%s</string>
    <string name="camera_b6">第二段：%s</string>
    <string name="camera_b7">视频总时长：</string>
    <string name="camera_b8">上传成功</string>
    <string name="camera_b9">上传失败</string>
    <string name="camera_c1">开始</string>
    <string name="camera_c2">去认证</string>
    <string name="camera_c3">认证未通过</string>
    <string name="camera_c4">高级实名认证未通过，请重新认证</string>
    <string name="camera_c5">已驳回,重新认证</string>
    <string name="camera_c6">返回APP首页</string>
    <string name="camera_c7">即将进行认证视频的录制，请保证手机网络顺畅或在WIFI环境下进行，否则可能会导致视频上传失败，则需要您重新录制视频。</string>
    <string name="camera_c8">认证视频共分为2段，2段视频总限时2分钟，总大小不超过100M，请合理安排录制每段视频的时间。</string>
    <string name="camera_c9">每段视频录制完成后，您可以播放本段视频检查一下视频清晰度。如果对视频不满意可以重新录制本段。</string>
    <string name="camera_c10">第一段视频</string>
    <string name="camera_d1">请根据提示的内容进行操作，完成认证视频的录制。录制过程中会要求拍摄您的证件，请务必提前准备好您初级认证时使用的证件。</string>
    <string name="camera_d2">我已经阅读知晓</string>
    <string name="camera_d3">第二段视频</string>
    <string name="camera_d4">1.请您保持面部在视频中央，大声念出屏幕提示的文字，可佩带眼镜。 \n 2.不用手持证件。  \n3.总时长不得超过2分钟。  \n4.视频上传对流量与网速要求较高，视频上传预计消耗20M流 量。</string>
    <string name="camera_d5">我已经阅读知晓</string>
    <string name="camera_d6">重录</string>
    <string name="camera_d7">下一段</string>
    <string name="camera_d8">提交成功</string>
    <string name="camera_d12">提交</string>
    <string name="camera_d9">视频已上传成功 请等待审核...</string>
    <string name="camera_e1">准备上传</string>
    <string name="camera_e2">开始上传</string>
    <string name="camera_e3">已认证</string>
    <string name="camera_e4">审核中</string>
    <string name="camera_e5">已驳回，重新认证</string>
    <string name="camera_e6">身份认证</string>
    <string name="permossion_denied">请赋予相关权限后再操作</string>
    <string name="Completed">完成</string>
    <string name="camera_base_01">请完成初级实名认证</string>
    <string name="base_02">初级认证</string>
    <string name="userinfo">认证提示\n我是%1$s证件号码是:%2$s我自愿在CoinW注册和交易，并保证账户是本人使用。我保证所有资产来源合法，已经了解并能承受全部交易风险，提取的数字资产不做非法使用，也不会用本平台进行任何非法活动，例如洗钱、传销、和非法兑换外币等。</string>
    <string name="des3">认证提示\n请手持身份证正面（有照片的一面），将其放置于面部下方，正对摄像头，保持5秒钟以上，请摘下眼镜、帽子等物品。</string>
    <string name="sc1">视频长度超过2分钟，请重新录制！</string>
    <string name="no_permission_camera" translatable="false">没有权限</string>
    
    <string name="camera_record_failed" >录制出错，请重试</string>
    <string name="camera_retry">重试</string>
</resources>
