<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <include
        android:id="@+id/include"
        layout="@layout/camera_base_title_01" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:src="@mipmap/upload_successful" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/camera_a2"
        android:textColor="#333333"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/des"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/camera_a3"
        android:textColor="#3B3B3B"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:gravity="center">

        <Button
            android:id="@+id/toFb"
            android:layout_width="164dp"
            android:layout_height="40dp"
            android:background="#6F679A"
            android:text="@string/camera_a5"
            android:textColor="#ffffff"
            android:textSize="13sp" />

        <Button
            android:id="@+id/toBb"
            android:layout_width="164dp"
            android:layout_height="40dp"
            android:layout_marginLeft="13dp"
            android:background="#6F679A"
            android:text="@string/camera_a6"
            android:textColor="#ffffff"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/toSeniorCertification"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_rectangle_"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/camera_a7"
            android:textColor="#5A5282"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/camera_a4"
            android:textColor="#928DAA"
            android:textSize="9sp" />

    </LinearLayout>
</LinearLayout>