<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:ignore="ResourceName">

    <include
        android:id="@+id/include"
        layout="@layout/camera_base_title_01" />

    <RelativeLayout
        android:id="@+id/base_auth1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/camera_a9"
            android:textColor="#333333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/status1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_gravity="right"
            android:text="@string/camera_c2"
            android:textColor="#333333"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/status1"
            android:src="@mipmap/tan_" />

        <ImageView android:id="@+id/iv_arrow1"
            android:layout_width="5dp"
            android:layout_height="8dp"
            android:src="@mipmap/ic_click_right_black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#DFDDDD" />

    <RelativeLayout
        android:id="@+id/high_auth"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/camera_b1"
            android:textColor="#333333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/status2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:text="@string/camera_c2"
            android:textColor="#333333"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/status2"
            android:src="@mipmap/tan_" />

        <ImageView android:id="@+id/iv_arrow2"
            android:layout_width="5dp"
            android:layout_height="8dp"
            android:src="@mipmap/ic_click_right_black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#DFDDDD" />

</LinearLayout>